syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.msg";
option java_outer_classname = "UserCreationRequestProto";

package com.example.msg;

message UserCreationRequest {
    string firstName = 1;
    string lastName = 2;
    string email = 3;
}
